--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
+title: Twinkle Project
+avatar: assets/images/logo_2.png
+favicon: assets/icons/robot_emoji.png
+color_theme: light
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -30,9 +33,30 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: minima
-plugins:
-  - jekyll-feed
+theme: type-on-strap
+#plugins:
+#  - jekyll-feed
+
+# Theme customization
+header_text: " "
+header_feature_image: assets/images/logo_and_text.jpg
+header_feature_image_responsive: false
+footer_text: "This project has received funding from the European Union’s \"Next Generation EU\" research and innovation programme under CUP E53D2300777 0001."
+# Inspiration for the footer: https://nephele-project.eu/
+
+# Collections
+collections:
+  my_collection:
+    output: true
+    permalink: /:collection/:name
+
+
+# BLOG CONFIGURATION
+post_navigation: true
+paginate: 10
+excerpt: true
+paginate_path: "blog/page:num"
+plugins: [jekyll-paginate, jekyll-seo-tag, jekyll-feed]
 
 # Exclude from processing.
 # The following items will not be processed, by default.
