--- a/_config.yml
+++ b/_config.yml
@@ -27,15 +27,16 @@ description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+domain: "twinkle-project.github.io"
+baseurl: ""                                 # place folder name if the site is served in a subfolder
+url: "https://twinkle-project.github.io/"   # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
 # theme: type-on-strap
 # For Github Pages is necessary to point a remote theme if different from the GH supported themes
-remote_theme: type-on-strap
+remote_theme: sylhare/Type-on-Strap
 #plugins:
 #  - jekyll-feed
 
